AUT-1400 Update Spring Boot version to 2.7.18